# layout-prompter

./: .gitignore  CHANGELOG.md  Makefile  README.md  debug.py  pyproject.toml
.github/workflows/: ci.yaml  deploy.yaml  release.yaml
layout_prompter/: __init__.py  dataset.py  dataset_configs.py  datasets.py  exception.py  layout_prompter.py  llm.py  parsers.py  parsing.py  preprocess.py  preprocessor.py  preprocessors.py  ranker.py  rankers.py  selection.py  selector.py  selectors.py  serialization.py  serializer.py  serializers.py  testing.py  transforms.py  typehint.py  utils.py  visualization.py  visualizer.py  visualizers.py
layout_prompter/modules/: __init__.py  llm.py  rankers.py  selectors.py  serializers.py
notebooks/: constraint_explicit.ipynb  content_aware.ipynb  content_aware_local.ipynb  key_error_from_style_tag_response.json  response.json  runtime_error_label_not_same_response.json  success_response.json  text_to_layout.ipynb  value_error_expected4receive0_response.json
test_fixtures/posterlayout/: metadata_small.csv
test_fixtures/posterlayout/content/: 0.json  1000.json  2000.json  3000.json  4000.json  5000.json
test_fixtures/publaynet/completion/: 1000.json  2000.json  3000.json  4000.json  5000.json
test_fixtures/publaynet/gen-r/: 0.json  1000.json  2000.json  3000.json  4000.json  5000.json
test_fixtures/publaynet/gen-t/: 1000.json  2000.json  3000.json  4000.json  5000.json
test_fixtures/publaynet/gen-ts/: 0.json  1000.json  2000.json  3000.json  4000.json  5000.json
test_fixtures/publaynet/raw/: 0.json  1000.json  2000.json  3000.json  4000.json  5000.json
test_fixtures/publaynet/refinement/: 0.json  1000.json  2000.json  3000.json  4000.json  5000.json
test_fixtures/rico/completion/: 0.json  1000.json  2000.json  3000.json  4000.json  5000.json
test_fixtures/rico/gen-r/: 0.json  1000.json  2000.json  3000.json  4000.json  5000.json
test_fixtures/rico/gen-t/: 0.json  1000.json  2000.json  5000.json
test_fixtures/rico/gen-ts/gents/: 0.json  1000.json  2000.json
test_fixtures/rico/raw/: 0.json  1000.json  2000.json  3000.json  4000.json  5000.json
test_fixtures/rico/refinement/: 0.json  1000.json  2000.json  3000.json  4000.json  5000.json
test_fixtures/webui/raw/: 0.json  1000.json  2000.json  3000.json  4000.json  5000.json
test_fixtures/webui/text/: 0.json  1000.json  2000.json  3000.json  4000.json  5000.json
tests/: conftest.py  preprocessors_test.py
